--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 /* ================= DESKTOP ================= */
 body{
   min-height:100vh;
-  background:url("desktop.jpg") center/cover no-repeat fixed;
+  background:url("desktop1.jpg") center/cover no-repeat fixed;
   display:flex;
   align-items:center;
   overflow:hidden;
